objects/skuid__Page_Interaction__c.object
<CustomObject>
    <fields>
        <fullName>skuid__Data__c</fullName>
        <description>Additional information about this interaction stored in JSON format.</description>
        <label>Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>skuid__Page__c</fullName>
        <label>Page</label>
        <referenceTo>skuid__Page__c</referenceTo>
        <relationshipLabel>Page Interactions</relationshipLabel>
        <relationshipName>Page_Interactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>skuid__Type__c</fullName>
        <description>Describes the Interaction Type. This value is set and understood by Skuid&apos;s internal processes.</description>
        <label>Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>skuid__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Page_Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Page Interaction</label>
    <nameField>
        <displayFormat>PgInt-{000000}</displayFormat>
        <label>Page Interaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Page Interactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>